fix basic-color-picker width offset to remove x overflow/scroll bars

--- a/basic-color-picker/style.css
+++ b/basic-color-picker/style.css
@@ -22,7 +22,7 @@ html, body {
     --color-viewer-height: 100%;
     --color-picker-background-color: #d3d3d3;
     --color-picker-panel-height-offset: calc(2 * -3*var(--slider-dim));
-    --color-picker-panel-width-offset: calc(2*var(--border-width));
+    --color-picker-panel-width-offset: calc(-2*var(--border-width));
     --border-width: 1px;
     height: calc(var(--color-viewer-height) + 3*var(--slider-dim) + var(--color-picker-panel-height-offset));
     width: calc(var(--color-viewer-width) + var(--color-picker-panel-width-offset));
